[package]
name = "atlas-core"
version = "0.1.0"
edition = "2021"
description = "The core messages and protocol definitions relating to the BFT SMR protocol. Separated for easier exchanging of consensus!"
authors = ["Nuno Neto <nuno.martingo@fc.up.pt>"]
license = "MIT"
homepage = "https://github.com/nuno1212s/atlas"
repository = "https://github.com/nuno1212s/atlas"
documentation = "https://docs.rs/atlas"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

serialize_serde = ["serde", "atlas-common/serialize_serde", "atlas-communication/serialize_serde"]
serialize_capnp = ["atlas-capnp", "atlas-common/serialize_capnp"]

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
atlas-common = { path = "../Atlas-Common" }
atlas-communication = { path = "../Atlas-Communication" }
atlas-capnp = { path = "../Atlas-capnp", optional = true }
atlas-metrics = { path = "../Atlas-Metrics" }
serde = { version = "*", optional = true }
crossbeam = "0.8.2"
intmap = "2.0.0"

chrono = "0.4.24"
log = "0.4.17"