[package]
name = "atlas-core"
version = "0.1.0"
edition = "2021"
description = "The core messages and protocol definitions relating to the BFT SMR protocol. Separated for easier exchanging of consensus!"
authors = ["Nuno Neto <nuno.martingo@fc.up.pt>"]
license = "MIT"
homepage = "https://github.com/nuno1212s/atlas"
repository = "https://github.com/nuno1212s/atlas"
documentation = "https://docs.rs/atlas"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

serialize_serde = ["serde"]
serialize_capnp = ["atlas-capnp"]

[dependencies]
atlas-common = { path = "../Atlas-Common" }
atlas-communication = { path = "../Atlas-Communication" }
atlas-capnp = { path = "../Atlas-capnp", optional = true }
atlas-metrics = { path = "../Atlas-Metrics" }
serde = { version = "*", optional = true }

anyhow = "*"
thiserror = "*"
getset = "*"
dyn-clone = "*"
itertools = "*"

tracing = "*"

[dev-dependencies]
divan = "*"
tracing-appender = "*"
tracing-subscriber = "*"